--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -20,6 +20,9 @@ security:
             provider: app_user_provider
             logout:
                 path: app_logout
+            guard:
+                authenticators:
+                    - App\Security\LoginFormAuthenticator
 
             # activate different ways to authenticate
             # https://symfony.com/doc/current/security.html#firewalls-authentication
