--- a/package.json
+++ b/package.json
@@ -1,6 +1,18 @@
 {
   "devDependencies": {
+    "@fortawesome/fontawesome-free": "^5.14.0",
     "@symfony/webpack-encore": "^0.31.0",
-    "boostrap": "^2.0.0"
+    "boostrap": "^2.0.0",
+    "bootstrap": "^3.4.1",
+    "font-awesome": "^4.7.0",
+    "node-sass": "^4.14.1",
+    "popper.js": "^1.16.1",
+    "ts-loader": "^8.0.4",
+    "typescript": "^4.0.3",
+    "webpack-notifier": "^1.8.0"
+  },
+  "dependencies": {
+    "jquery": "^3.5.1",
+    "sass-loader": "^10.0.2"
   }
 }
