--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "webpack-notifier": "^1.8.0"
   },
   "dependencies": {
+    "copy-webpack-plugin": "^6.1.1",
     "jquery": "^3.5.1",
     "sass-loader": "^10.0.2"
   }
